Fix layout to make grid fit popup

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="./lib/grid.light.css">
     <link rel="stylesheet" href="popup.css">
 </head>
-<body>
-<div id="container"></div>
+<body style="display:flex;align-items:stretch">
 <script type="module" src="popup.js"></script>
 </body>
 </html>
